# SDL-Playground

./: CMakeLists.txt  README.md
include/: Application.h
src/: Application.cpp  main.cpp
